--- a/index.html
+++ b/index.html
@@ -137,7 +137,6 @@
                 <img src="./images/Rectangle 15.png" alt="#">
                 <p>Word Games</p>
             </div>
-
         
             <div class="team-man">
                 <img src="./images/Rectangle 16.png" alt="#">
@@ -173,12 +172,12 @@
             </div>
 
             <div class="footer-nav">
-                <p>Our Story</p>
-                <p>Games</p>
-                <p>Web Games</p>
-                <p>Careers</p>
-                <p>Support</p>
-                <p>My Account</p>
+                <p class="footer-nav-p">Our Story</p>
+                <p class="footer-nav-p">Games</p>
+                <p class="footer-nav-p">Web Games</p>
+                <p class="footer-nav-p">Careers</p>
+                <p class="footer-nav-p">Support</p>
+                <p class="footer-nav-p">My Account</p>
             </div>
 
             <div class="footer-icon">
@@ -197,8 +196,10 @@
                 <p>Privacy Policy</p>
             </div>
 
-            <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
-
+            <div class="games-coppright-section">
+                <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+            </div>
+            
         </div>
     </footer>
 </body>
